* mention necesary #includes in REAMDE * fix compilation for programs that use #include <arts/...> : -#include <kmedia2.h> +#include "kmedia2.h"
svn path=/trunk/kdelibs/; revision=131408

--- a/arts/kde/README
+++ b/arts/kde/README
@@ -40,6 +40,13 @@ Line:
 
 That's it, with 7 LOC a "full" media player :)
 
+To make the example above compile you will also have to add these #includes:
+#include <arts/kartsserver.h>
+#include <arts/kartsdispatcher.h>
+#include <arts/kplayobject.h>
+#include <arts/kplayobjectfactory.h>
+    
+
 Enjoy...
 Nikolas Zimmermann 
 <wildfox@kde.org>
