Kurt's first entry into the "wishlist" (Also his first encounter of a CVS merge conflict, which he resolved mercilessly... ;-)
svn path=/trunk/kdelibs/; revision=131604

--- a/kdeprint/TODO
+++ b/kdeprint/TODO
@@ -36,4 +36,7 @@ WISHES
 
 - extension of the print ioslave to view jobs (print:/jobs)
 
+- possibility to print whole screen or highlighted window
+  directly to printer?
+                                                         (-kp-)                                 
 - add a "Print" button to the IPP report dialog
