--- a/README
+++ b/README
@@ -15,77 +15,111 @@ This is version 3.0 of the KDE libraries.
 This package includes libraries that are central to the development and 
 execution of a KDE program, as well as internationalization files for these 
 libraries, misc HTML documentation, theme modules, and regression tests. 
-Here is a list:
+Here is an alphabetical list:
 
-* kdecore
-    This is the core collection of KDE stuff. Non GUI classes reside here.
+* arts
+    ARTS (analog realtime synthesizer) is a environment of small modules
+    that one can plug together to process multimedia data.
 
-* kdeui
-    The main collection of misc. user interface classes (widgets).
+* dcop
+    The desktop communication program allows even shell scripts to communicate
+    with KDE applications. It's also the base for KParts.
 
-* kimgio
-    An all purpose extension to the qimgio class that supports some obscure
-    image formats.
-
-* kfile
-    This library contains the KFileDialog in all its glory.
-
-* kspell
-    KSpell and related classes are a frontend to ispell for use within a
-    GUI app.
+* interfaces
+    kparts interface for text editors
 
 * kab
     The address book library.
 
+* kabc
+    Replacement for kab.
+
+* kate
+    KPart for 'kate', the KDE advanced text editor.
+
+* kcert
+    Personal certification manager.
+
+* kconf_update
+    Auto-Updater for config files.
+
+* kdecore
+    This is the core collection of KDE stuff. Non GUI classes reside here.
+
+* kded
+    The KDE daemon checks for newly installed software, update files
+    or hostname changes and takes according actions.
+
+* kdefx
+    Library with pixmap effects.
+
+* kdeprint
+    The very versatily printing subsystem of KDE.
+
+* kdesu
+    Library for password entering and handling
+
+* kdeui
+    The main collection of misc. user interface classes (widgets).
+
+* kdewidgets
+    For developers: KDE's custom widgets for Qt Designer.
+
+* kdoctools
+    Contains mostly stuff convert XML docbook files via XSLT into
+    human readable stuff.
+
 * khtml
-    The next generation HTML rendering widget designed for Konqueror
-    (kfm's successor). This supports HTML 4, CSS, and a variety of other web
-    related standards.
+    The next generation HTML rendering widget designed for Konqueror.  This
+    supports HTML 4, CSS, and a variety of other web related standards.
+
+* kimgio
+    An all purpose extension to the qimgio class that supports various
+    image formats.
+
+* kinit
+    Process launcher, used for fast KDE startup
 
 * kio
     Classes that fetch and decode URLs are contained here. This library also
     contains "ksycoca", the system configure cache containing services,
     applications, servicetypes and mimetypes.
 
+* kioslave
+    I/O subprocesses to handle files, ftp, http, gzip and bzip2 streams.
+
 * kjs
-    KDE's implementation of ECMAScript (aka JavaScript).
+    Implementation of ECMAScript (aka JavaScript).
 
 * kparts
     KDE component model.
+
+* ksmartcard
+    Library for smartcard-support.
+
+* kspell
+    KSpell and related classes are a frontend to ispell for use within a
+    GUI app.
 
 * kstyles
     The theme engine lies within. It handles nearly anything relating to
     customizing the appearance of widgets.
 
-* dcop
-    The desktop communication program allows even shell scripts to communicate
-    with KDE applications. It's also the base for KParts.
-
-* kssl
-    An SSL intergration for KDE. It currently uses OpenSSL.
-
-* arts
-    ARTS (analog realtime synthesizer) is a environment of small modules
-    that one can plug together to process multimedia data.
-
-* kdesu
-    Library for password entering and handling
-
-* kinit
-    Process launcher, used for fast KDE startup
-
-* ksgmltools
-    Docbook and SGML tools needed to generate documentation for KDE.
+* kwallet
+    Client and backend to store values in encrypted files.
 
 * libkmid
     MIDI file handling and midi mapper (manages output of midi files to
     various devices).
 
-* interfaces
-    kparts interface for text editors
+* libkscreensaver
+    Library for making KDE screensavers.
 
 * libtldl
     System independed dlopen() handler.
+
+* licenses
+    Contains texts of all used licenses.
 
 * mimetypes
     Database of mime types.
@@ -93,8 +127,6 @@ Here is a list:
 * pics
     Database of icons.
 
-* libkscreensaver
-    Library for making KDE screensavers.
 
 Licensing
 ---------
