--- a/kdewidgets/README
+++ b/kdewidgets/README
@@ -5,10 +5,11 @@ KDE Custom Widgets for Qt Designer 2
 Summary:
 ========
 
-This directory contains KDE custom widgets for designer 2 which comes with Qt 3.
-Just make sure your plugin path in qtconfig includes $KDEDIR/lib/kde3/plugins
+This directory contains KDE custom widgets for designer 2 which comes with
+Qt 3. Just make sure your plugin path in qtconfig includes
+$KDEDIR/lib/kde3/plugins
 
-This plugin uses the QWidget plugin API of Qt >= 3.0 
+This plugin uses the QWidget plugin API of Qt >= 3.0
 Don't expect it to work with any other versions of Qt.
 
 
