CVS_SILENT update
svn path=/trunk/kdelibs/; revision=132339

--- a/kdoctools/customization/sk/entities/fdl-notice.docbook
+++ b/kdoctools/customization/sk/entities/fdl-notice.docbook
@@ -1,8 +1,8 @@
-<para>Permission is granted to copy, distribute and/or modify this
-document under the terms of the GNU Free Documentation License,
-Version 1.1 or any later version published by the Free Software
-Foundation; with &FDLInvariantSections;, with &FDLFrontCoverText;, and
-with &FDLBackCoverText;.  A copy of the license is included in <xref linkend="gnu-fdl"/>.</para>
+<para>Máte právo kopírovať, distribuovať a/lebo modifikovať 
+tento dokument v rámci licencie GNU Free Documentation License, 
+Version 1.1 alebo vyššej tak, ako ju publikoval the Free Software 
+Foundation; with &FDLInvariantSections;, s &FDLFrontCoverText;, a 
+s &FDLBackCoverText;. Kópia tejto licencie je priložená v <xref linkend="gnu-fdl"/>.</para>
 <!--
 Local variables:
 mode: sgml
