--- a/kdoctools/customization/sk/entities/underArtisticLicense.docbook
+++ b/kdoctools/customization/sk/entities/underArtisticLicense.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
+<para>Tento program je licencovaný pod <ulink
 url="common/artistic-license.html">Artistic License</ulink>.</para>
