--- a/kdoctools/customization/sk/entities/gpl-notice.docbook
+++ b/kdoctools/customization/sk/entities/gpl-notice.docbook
@@ -8,8 +8,8 @@ useful, but WITHOUT ANY WARRANTY; without even the implied warranty
 of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 General Public License for more details.</para>
 
-<para>You should have received a copy of the GNU General Public
-License along with this program; if not, write to the Free Software
+<para>Mali by ste dostať kópiu licencie GNU General Public
+License spolu s týmto programom, ak nie, napíšte na adresu the Free Software
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</para>
 <!--
 Local variables:
