--- a/kdoctools/customization/sk/entities/install-compile.docbook
+++ b/kdoctools/customization/sk/entities/install-compile.docbook
@@ -1,12 +1,12 @@
-<para>In order to compile and install &kappname; on your system, type the
-following in the base directory of the &kappname; distribution:</para>
+<para>Aby ste preložili a nainštalovali &kappname; na váš systém, zadajte v základnom 
+priečinku distribúcie &kappname; tieto príkazy:</para>
 
 <screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command> install</userinput>
 </screen>
 
-<para>Since &kappname; uses <command>autoconf</command> and
-<command>automake</command> you should have no trouble compiling it. Should you
-run into problems please report them to the &kde; mailing lists.</para>
+<para>Pretože &kappname; používa <command>autoconf</command> a
+<command>automake</command> nemali by ste mať s prekladom žiadne problémy. 
+Ak ale na nejaké narazíte, oznámte ich v konferenciách &kde;.</para>
 
