--- a/kdoctools/customization/sk/entities/install-intro.docbook
+++ b/kdoctools/customization/sk/entities/install-intro.docbook
@@ -1,6 +1,5 @@
 <!-- requires that packagename is defined in the documentation prologue -->
-<para>&kappname; is part of the &kde; project &kde-http;.</para>
+<para>&kappname; je súčasťou projektu &kde; &kde-http;.</para>
 
-<para>&kappname; can be found in the &package; package on 
-&kde-ftp;, the main &FTP; site of the &kde;
-project.</para>
+<para>&kappname; nájdete v balíku &package; na  
+&kde-ftp;, hlavnom &FTP; serveri projektu &kde;.</para>
