--- a/kdoctools/customization/sk/entities/lgpl-notice.docbook
+++ b/kdoctools/customization/sk/entities/lgpl-notice.docbook
@@ -8,8 +8,8 @@ useful, but WITHOUT ANY WARRANTY; without even the implied warranty
 of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 Lesser General Public License for more details.</para>
 
-<para>You should have received a copy of the GNU Lesser General
-Public License along with this library; if not, write to the Free
+<para>Mali by ste dostať kópiu licencie GNU Lesser General
+Public License spolu s touto knižnicou. Ak nie, napíšte na adresu the Free
 Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 02111-1307 USA</para>
 <!--
