--- a/kdoctools/customization/sk/entities/underBSDLicense.docbook
+++ b/kdoctools/customization/sk/entities/underBSDLicense.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
+<para>Tento program je licencovaný pod <ulink
 url="common/bsd-license.html">BSD License</ulink>.</para>
