--- a/kdoctools/customization/sk/entities/underGPL.docbook
+++ b/kdoctools/customization/sk/entities/underGPL.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
+<para>Tento program je licencovaný pod <ulink
 url="common/gpl-translated.html">GNU General Public License</ulink>.</para>
