--- a/kdoctools/customization/sk/entities/underX11License.docbook
+++ b/kdoctools/customization/sk/entities/underX11License.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
+<para>Tento program je licencovaný pod <ulink
 url="common/x11-license.html">X11 License</ulink>.</para>
