--- a/kdoctools/customization/sl/entities/help-menu.docbook
+++ b/kdoctools/customization/sl/entities/help-menu.docbook
@@ -5,12 +5,12 @@
 <shortcut>
 <keycombo action="simul"><keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>Contents...</guimenuitem>
+<guimenu>Pomoč</guimenu>
+<guimenuitem>Vsebina...</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Invokes the KDE Help system</action> starting at the
-&kappname; help pages. (this document).</para></listitem>
+<listitem><para><action>Vpokliče sistem pomoči KDE</action>, tako da odpre strani
+s pomočjo za &kappname; (ta dokument).</para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -18,41 +18,41 @@
 <shortcut>
 <keycombo action="simul">&Shift;<keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>What's This?</guimenuitem>
+<guimenu>Pomoč</guimenu>
+<guimenuitem>Kaj je to?</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Changes the mouse cursor to a combination arrow and
-question mark.</action>  Clicking on items within &kappname; will open a help
-window (if one exists for the particular item) explaining the item's
-function.</para></listitem>
+<listitem><para><action>Spremeni kurzor miške v kombinacijo puščice
+in vprašaja.</action>  Klik na elemente znotraj &kappname; bo odprl okno s pomočjo
+(če za ta določen element obstaja), ki opisuje funkcijo tega
+elementa.</para></listitem>
 </varlistentry>
 
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>Report Bug...</guimenuitem>
+<guimenu>Pomoč</guimenu>
+<guimenuitem>Poročaj o hrošču...</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>Opens the Bug report dialog</action> where you can
-report a bug or request a <quote>wishlist</quote> feature.</para></listitem>
+<listitem><para><action>Odpre pogovorno okno za sporočanje hroščev</action>, kjer lahko
+poročate o hrošču ali dopolnite <quote>seznam želja</quote>.</para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About &kappname;</guimenuitem>
+<guimenu>Pomoč</guimenu>
+<guimenuitem>O &kappname;</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This will display version and author
-information.</action></para></listitem>
+<listitem><para><action>To bo prikazalo različico in podatke o
+avtorju.</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About KDE</guimenuitem>
+<guimenu>Pomoč</guimenu>
+<guimenuitem>O KDE</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This displays the KDE version and other basic
-information.</action></para></listitem>
+<listitem><para><action>To prikaže različico KDE in druge osnovne
+podatke.</action></para></listitem>
 </varlistentry>
 </variablelist>
