--- a/kdoctools/customization/sl/entities/install-compile.docbook
+++ b/kdoctools/customization/sl/entities/install-compile.docbook
@@ -1,12 +1,12 @@
-<para>In order to compile and install &kappname; on your system, type the
-following in the base directory of the &kappname; distribution:</para>
+<para>Da prevedete in namestite &kappname; v vaš sistem, vtipkajte 
+naslednje v osnovni imenik distribucije &kappname;:</para>
 
 <screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command> install</userinput>
 </screen>
 
-<para>Since &kappname; uses <command>autoconf</command> and
-<command>automake</command> you should have no trouble compiling it. Should you
-run into problems please report them to the &kde; mailing lists.</para>
+<para>Ker &kappname; uporablja <command>autoconf</command> in
+<command>automake</command> ne bi smeli imeti težav pri prevajanju. Če nanje vendarle 
+naletite, jih prosim sporočite v poštne sezname &kde;.</para>
 
