--- a/kdoctools/customization/sl/entities/install-intro.docbook
+++ b/kdoctools/customization/sl/entities/install-intro.docbook
@@ -1,5 +1,5 @@
 <!-- requires that packagename is defined in the documentation prologue -->
-<para>&kappname; is part of the &kde; project &kde-http;.</para>
+<para>&kappname; je del projekta &kde; &kde-http;.</para>
 
-<para>&kappname; can be found in the &package; package on &kde-ftp;, the main &FTP; site of the &kde;
-project.</para>
+<para>&kappname; lahko najdete v paketu &package; na &kde-ftp;, glavni &FTP; strani
+projekta &kde;.</para>
