--- a/kdeui/AUTHORS
+++ b/kdeui/AUTHORS
@@ -93,4 +93,5 @@ Falk Brettschneider <gigafalk@yahoo.com>
 contributes for the Dockwidget class set
 
 Holger Freyther <freyther@yahoo.com>
+KDialogBase, KGuiItem, KStdGuiItem, KAction,
 added KMessageBox::questionYesNoCancel( )
