--- a/kdeprint/ChangeLog
+++ b/kdeprint/ChangeLog
@@ -329,3 +329,7 @@ Since 2.2 release, Michael Goffioul <goffioul@imec.be>
 21/01/2002 Michael Goffioul <goffioul@imec.be>
   * LPR: added basic implementation of a KPrinterImpl object -> plugin is
     functional (though far from complete...)
+
+22/01/2002 Michael Goffioul <goffioul@imec.be>
+  * kdeprintfax: make use of new address book (libkabc) instead of the old
+    one (libkab).
