CVS_SILENT Updates
svn path=/trunk/kdelibs/; revision=134337

--- a/kdoctools/customization/da/entities/help-menu.docbook
+++ b/kdoctools/customization/da/entities/help-menu.docbook
@@ -10,7 +10,7 @@
 </menuchoice>
 </term>
 <listitem><para><action>Starter KDE's Hjælpesystem</action> startende med
-&kappname; hjælpesiderne. (dette dokument).</para></listitem>
+hjælpesiderne for &kappname; (dette dokument).</para></listitem>
 </varlistentry>
 
 <varlistentry>
