--- a/kdoctools/customization/da/entities/install-compile.docbook
+++ b/kdoctools/customization/da/entities/install-compile.docbook
@@ -1,5 +1,5 @@
 <para>For at kompilere og installere &kappname; på dit system, skal du
-skrive følgende i basismappen for &kappname; distributionen:</para>
+skrive følgende i basismappen for distributionen for &kappname; :</para>
 
 <screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
