--- a/kdoctools/customization/de/entities/gpl-notice.docbook
+++ b/kdoctools/customization/de/entities/gpl-notice.docbook
@@ -1,16 +1,31 @@
-<para>This program is free software; you can redistribute it and/or
-modify it under the terms of the GNU General Public License as
-published by the Free Software Foundation; either version 2 of the
-License, or (at your option) any later version.</para>
+<!-- This file can be used to include the notice in documentation 
+     <!DOCTYPE book ... >
+    ...
+     <bookinfo>
+       <legalnotice>
+         <para>Copyright (C) 20yy  [name of author]</para>
+         &GPLnotice;
+       </legalnotice>
+     </bookinfo>
+    ...
 
-<para>This program is distributed in the hope that it will be
-useful, but WITHOUT ANY WARRANTY; without even the implied warranty
-of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-General Public License for more details.</para>
+    Alternatively, you can include the text literally.
+ -->
+<para>Dieses Programm ist freie Software. Sie können es unter den 
+Bedingungen der General GNU Public License, wie von der Free Software 
+Foundation veröffentlicht, weitergeben und/oder modifizieren, entweder 
+gemäß Version 2 der Lizenz oder (nach Ihrer Option) jeder späteren 
+Version.</para>
 
-<para>You should have received a copy of the GNU General Public
-License along with this program; if not, write to the Free Software
-Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</para>
+<para>Die Veröffentlichung des Programms erfolgt in der Hoffnung, dass 
+es Ihnen von Nutzen sein wird, aber OHNE IRGENDEINE GARANTIE, sogar 
+ohne die implizite Garantie der MARKTREIFE oder der VERWENDBARKEIT FÜR 
+EINEN BESTIMMTEN ZWECK. Details finden Sie in der GNU
+General Public License.</para>
+
+<para>Sie sollten eine Kopie der GNU General Public License zusammen mit 
+diesem Programm erhalten haben. Falls nicht, schreiben Sie an die 
+Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</para>
 <!--
 Local variables:
 mode: sgml
