--- a/kdoctools/customization/de/entities/install-compile.docbook
+++ b/kdoctools/customization/de/entities/install-compile.docbook
@@ -1,12 +1,15 @@
-<para>In order to compile and install &kappname; on your system, type the
-following in the base directory of the &kappname; distribution:</para>
+<para>Um &kappname; auf Ihrem System zu kompilieren und zu
+installieren, schreiben Sie das Folgende in das Hauptverzeichnis in
+der &kappname;-Distribution: </para>
 
-<screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
+<screen><prompt>%</prompt>
+ <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command> install</userinput>
 </screen>
 
-<para>Since &kappname; uses <command>autoconf</command> and
-<command>automake</command> you should have no trouble compiling it. Should you
-run into problems please report them to the &kde; mailing lists.</para>
+<para>Da &kappname; <command>autoconf</command> und
+<command>automake</command> benutzt, sollte es dabei keine
+Schwierigkeiten geben. Sollten dennoch Probleme auftauchen, wenden Sie
+sich bitte an die &kde;-Mailinglisten.</para>
 
