--- a/kdoctools/customization/de/entities/install-intro.docbook
+++ b/kdoctools/customization/de/entities/install-intro.docbook
@@ -1,8 +1,8 @@
 <!-- requires that packagename is defined in the documentation prologue -->
-<para>&kappname; is part of the &kde; project &kde-http;.</para>
+<para>&kappname; ist Teil des &kde;-Projekts &kde-http;.</para>
 
-<para>&kappname; can be found in the &package; package on &kde-ftp;, 
-the main &FTP; site of the &kde; project.</para>
+<para>&kappname; können Sie im &package;-Paket finden auf &kde-ftp;,
+der Haupt-&FTP;-Site des &kde;-Projekts.</para>
 
 
 
