--- a/kdoctools/customization/de/entities/underArtisticLicense.docbook
+++ b/kdoctools/customization/de/entities/underArtisticLicense.docbook
@@ -1,2 +1,3 @@
 <para>Dieses Programm ist unter den Bedingungen der 
-<ulink url="common/artistic-license.html">Artistic License</ulink> ver&ouml;ffentlicht.</para>
+<ulink url="common/artistic-license.html">Artistic License</ulink> 
+ver&ouml;ffentlicht.</para>
